CSS/main.css
/* ... */
#modal__message {
	overflow: auto;
	font-weight: var(--default-font-weight);
}
#modal__message p {
	margin-left: 0em;
}
#modal__buttonContainer {
	display: flex;
	justify-content: flex-end;
	gap: var(--gap);
}
.modal__button {
	font-size: 0.9em;
}
@media (prefers-color-scheme: dark) {
	#modal__heading, #modal__message {
		font-weight: var(--thin-font-weight);
	}
}

/* Main */

main {
	flex-grow: 1;
}
section {
	width: 100%;
	padding: var(--section-default-padding-vertical) var(--section-default-padding-horizontal);
	font-weight: var(--default-font-weight);
}
h2 {
	font-size: 1.75em;
}
h3 {
	font-size: 1.45em;
}
h4 {
	font-size: 1.25em;
}
h5 {
	font-size: 1.1em;
}
p {
	margin-left: auto;
	margin-right: auto;
	max-width: var(--paragraph-max-width);
	line-height: 1.3em;
}
:is(p, ul, pre) + p {
	margin-top: 0.7em;
}
:is(p, ul, pre) + ul,
li ul {
	margin-top: 0.4em;
}
a {
	word-break: break-word;
	color: dodgerblue;
}
a:visited {
	color: orchid;
}
.primaryButton, .primaryButton:visited {
	transition: transform var(--transition-duration) ease;
	outline: none;
	border: none;
	border-radius: var(--border-radius);
	padding: 0.25em 0.75em;
	background-color: var(--primary-color);
	cursor: pointer;
	font-weight: var(--default-font-weight);
	text-align: center;
	text-decoration: none;
	color: var(--on-primary-color);
}
.primaryButton:hover {
	transform: scale(1.05);
}
video {
	max-width: 100%;
}
@media (prefers-color-scheme: dark) {
	section {
		font-weight: var(--thin-font-weight);
	}
}

/* -- Sections */

/* -- -- Page Intro */

.section--pageIntro__heading {
	margin: 0.5em;
	font-size: 3em;
	text-align: center;
	color: var(--primary-color);
}
.section--pageIntro__heading:not(:has(+ .section--pageIntro__description)) {
	margin-bottom: 0em;
}
.section--pageIntro__description p {
	font-size: 1.3em;
	text-align: center;
}
.section--pageIntro__description .primaryButton {
	display: block;
	margin: auto;
	margin-top: 1em;
	width: max-content;
}
.section--pageIntro__description .primaryButton::before {
	content: attr(title);
	font-size: 1.25em;
}
.section--pageIntro__description [title="Donate"] {
	background-color: unset;
	color: var(--primary-color);
}
.section--pageIntro__description [title="Donate"]::before {
	content: "\f4be";
	font-family: "Font Awesome 7 Free";
	font-size: 2em;
}
.section--pageIntro__tagsContainer {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	gap: 0.5em;
	margin-top: 1em;
}

/* -- -- Text */

.section--text {
	margin: auto;
	max-width: calc(var(--paragraph-max-width) + 2 * var(--section-default-padding-horizontal));
	padding-top: var(--section-default-padding-horizontal);
	padding-bottom: var(--section-default-padding-horizontal);
}
.section--text :is(h2, h3, h4, h5) {
	margin-bottom: 0.35em;
	color: var(--primary-color);
}
.section--text :is(h2, h3, h4, h5):not(:first-child) {
	margin-top: 0.75em;
}
.section--text ul {
	display: flex;
	flex-direction: column;
	gap: 0.3em;
	padding-left: 1em;
}
.section--text li {
	line-height: 1.3em;
}
.section--text ul:has(li[data-marker]) {
	list-style: none;
	padding-left: 1.3em;
}
.section--text li[data-marker] {
	position: relative;
}
.section--text li[data-marker]::before {
	content: attr(data-marker) " ";
	position: absolute;
	right: calc(100% + 0.3em);
	font-size: 0.8em;
}
.section--text img, .section--text video {
	display: block;
	margin: 2em auto;
}
.section--text .primaryButton {
	display: block;
	margin: auto;
	margin-bottom: 1em;
	width: max-content;
	font-size: 1.5em;
}
.section--text code {
	border-radius: var(--border-radius);
}

/* -- -- Qualifications */

.section--qualifications {
	display: flex;
	justify-content: space-evenly;
	flex-wrap: wrap;
	gap: 1em;
	background-color: var(--surface-color);
}
.section--qualifications::before {
	opacity: 0.07;
}
.qualification {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 10em;
	text-align: center;
	color: var(--on-background-color);
}
.qualification__icon {
	opacity: 0.75;
	font-size: 3em;
}
.qualification__icon--medify {
	border-radius: 0.125em;
	width: 2em;
	padding: 0.25em 0.3125em;
	font-size: 1.5em;
	background-color: var(--on-background-color);
}
.qualification__icon--medify p {
	font-size: 1.5em;
	line-height: 1em;
	font-family: "Graphik", sans-serif;
	font-weight: 700;
	letter-spacing: 0.009em;
	color: var(--background-color);
	-webkit-font-smoothing: antialiased;
}
.qualification__text {
	opacity: 0.5;
	margin-top: 0.5em;
	font-family: var(--cursive-font-family);
	letter-spacing: 0.1ch;
}

/* -- -- Double Item */

.section--doubleItem {
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	margin: auto;
	max-width: 1000px;
	padding-left: env(safe-area-inset-left);
	padding-right: env(safe-area-inset-right);
}
.section--doubleItem--reverse {
	flex-direction: row-reverse;
}
.section--doubleItem > * {
	width: 35%;
}
.section--doubleItem__iconContainer {
	display: grid;
	place-items: center;
}
.section--doubleItem__icon {
	font-size: 8em;
	color: var(--primary-color)
}
.section--doubleItem__textContainer {
	font-size: 1.2em;
}
.section--doubleItem__textContainer h2 {
	margin-bottom: 0.5em;
	font-size: 1.3em;
}
@media (max-width: 641px) {
	.section--doubleItem {
		flex-direction: column;
		gap: 1.5em;
		padding-left: var(--section-default-padding-horizontal);
		padding-right: var(--section-default-padding-horizontal);
	}
	.section--doubleItem > * {
		width: initial;
	}
	.section--doubleItem__icon {
		font-size: 6em;
	}
}

/* -- -- Price Display */

.section--priceDisplay {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 2em;
	text-align: center;
}
.section--priceDisplay__priceContainer {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 0.75em;
}
.section--priceDisplay__price {
	font-size: 2em;
	font-weight: bold;
}
.section--priceDisplay__price:not([href]) {
	font-size: 3.5em;
	color: var(--primary-color);
}
.section--priceDisplay__term {
	opacity: 0.6;
}
/* ... */

